--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-leaflet": "^5.0.0",
-    "react-leaflet-heatmap-layer-v3": "^3.0.3-beta-1"
+    "react-leaflet": "^5.0.0"
+    
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
